--- a/style.css
+++ b/style.css
@@ -24,3 +24,11 @@
 .brown{
     background-color: rgb(235, 159, 159);
 }
+
+.black{
+    fill: rgb(28 ,28, 28);
+}
+
+.white{
+    fill: rgb(255 ,255, 255);
+}
